--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
  <ul>
    <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
    <li><a routerLink="/compare">Compare</a></li>
+   <li><a (click)="logout()">Logout</a></li>
  </ul>
 <router-outlet></router-outlet>
