--- a/src/app/home/details/details.component.html
+++ b/src/app/home/details/details.component.html
@@ -1,5 +1,6 @@
 
 <mat-list *ngIf="clickedBool">
+    <mat-divider></mat-divider>
   <mat-list-item> Name: {{phones[phoneId].name}} </mat-list-item>
   <mat-divider></mat-divider>
   <mat-list-item> Cpu: {{phones[phoneId].cpu}} </mat-list-item>
@@ -9,8 +10,10 @@
   <mat-list-item> Main Camera: {{phones[phoneId].mainCamera}} </mat-list-item>
   <mat-divider></mat-divider>
   <mat-list-item> Secondary Camera: {{phones[phoneId].secondaryCamera}} </mat-list-item>
+  
   <mat-divider></mat-divider>
   <mat-list-item> Third Camera: {{phones[phoneId].thirdCamera}}</mat-list-item>
+  
   <mat-divider></mat-divider>
   <mat-list-item> Battery: {{phones[phoneId].Battery}} </mat-list-item>
   <mat-divider></mat-divider>
