--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
  <ul>
    <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
-   <li><a routerLink="/compare">Compare</a></li>
-   <li><a (click)="logout()">Logout</a></li>
+   <li><a routerLink="/compare" routerLinkActive="active">Compare</a></li>
+   <li><a (click)="logout()" routerLinkActive="active">Logout</a></li>
  </ul>
 <router-outlet></router-outlet>
