--- a/src/app/compare/compare.component.html
+++ b/src/app/compare/compare.component.html
@@ -1,7 +1,7 @@
 <br>
 
 <h4>Select 2 phones to Compare them</h4>
-<mat-form-field>
+<mat-form-field color="accent">
   <mat-label>Select 1st Smartphone</mat-label>
   <mat-select [formControl]="firstControl" required>
     <mat-option>--</mat-option>
@@ -14,15 +14,15 @@
   <mat-hint>{{firstControl.value?.name}}</mat-hint>
 </mat-form-field>
 <br>
-<mat-form-field>
-  <mat-label>Select 2nd Smartphone</mat-label>
+<mat-form-field color="accent">
+  <mat-label >Select 2nd Smartphone</mat-label>
   <mat-select [formControl]="secondControl" required>
     <mat-option>--</mat-option>
     <mat-option *ngFor="let phone of phones" [value]="phone">
       {{phone.name}}
     </mat-option>
   </mat-select>
-  <mat-error *ngIf="secondControl.hasError('required')">Please choose an animal</mat-error>
+  <mat-error *ngIf="secondControl.hasError('required')">Please choose a phone</mat-error>
   <mat-error *ngIf="firstControl.value == secondControl.value" >Please choose a different phone</mat-error>
   <mat-hint>{{secondControl.value?.name}}</mat-hint>
 </mat-form-field>
