--- a/src/app/compare/compare.component.css
+++ b/src/app/compare/compare.component.css
@@ -1,4 +1,34 @@
+.item{
+    
+    width: 270px;
+    height: 220px;
+    left:10%;
+    margin-top: 50px;
+    margin-left: -200px;
+    
+    
+    border: 3px solid #ff4081;
+     animation: slide-right 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    }
+
+    
+.password{
+        width:100%;
+    }
+.button{
+        font-style: bold;
+        font-family: arial;
+    }
+@keyframes slide-right {
+        0% {
+            transform: translateX(0);
+            opacity: 0;
+        }
+        100% {
+            transform: translateX(50px);
+            opacity:1;
+          }
+        }
 .itemone{
     float:left;
 }
-
