--- a/src/app/compare/compare.component.css
+++ b/src/app/compare/compare.component.css
@@ -7,7 +7,7 @@
     margin-left: -200px;
     
     
-    border: 3px solid #ff4081;
+    border: 3px solid #673ab7;
      animation: slide-right 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     }
 
