--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -6,7 +6,7 @@ left:50%;
 margin-left: -200px;
 top:50%;
 margin-top:110px;
-border: 3px solid #ff4081;
+border: 3px solid #673ab7;
  animation: slide-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 .button {
