--- a/src/app/compare/compare.component.css
+++ b/src/app/compare/compare.component.css
@@ -1,7 +1,7 @@
 .item{
     
-    width: 270px;
-    height: 220px;
+    width: 340px;
+    height: 230px;
     left:10%;
     margin-top: 50px;
     margin-left: -200px;
@@ -10,6 +10,7 @@
     border: 3px solid #673ab7;
      animation: slide-right 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     }
+
 
     
 .password{
@@ -31,4 +32,12 @@
         }
 .itemone{
     float:left;
+    margin-left: 20px;
+    margin-top: 10px;
+    border: 3px solid #673ab7;
+    border-radius: 4px;
+}
+h3 {
+    text-align: center;
+    font-weight: 700;
 }
