--- a/src/app/compare/compare.component.html
+++ b/src/app/compare/compare.component.html
@@ -58,7 +58,7 @@
 
 <div class="itemone" *ngIf="myBool">
   <ul  class="w3-ul w3-border">
-      <h3 style="text-weight: bold">Results</h3>
+      <h3 >Results</h3>
     <li>BestPhone: {{bestPhone.name}}</li>
      <li>Number Of Cameras: {{bestPhone.numberOfCams}} </li>
      <li>Main Camera: {{bestPhone.mainCamera}}</li>
