--- a/src/app/compare/compare.component.html
+++ b/src/app/compare/compare.component.html
@@ -43,7 +43,7 @@
    <li>Battery: {{phones[phoneOneId].Battery}}</li>
 </ul>
 </div>
-<div class="itemone" *ngIf="myBool">
+<div class="itemthree" *ngIf="myBool">
 <ul  class="w3-ul w3-border">
     <h3>Phone number 2</h3>
   <li>Name: {{phones[phoneTwoId].name}}</li>
@@ -56,7 +56,7 @@
 </ul>
 </div>
 
-<div class="itemone" *ngIf="myBool">
+<div class="itemtwo" *ngIf="myBool">
   <ul  class="w3-ul w3-border">
       <h3 >Results</h3>
     <li>BestPhone: {{bestPhone.name}}</li>
